--- a/views/profile/create_update_talk.html
+++ b/views/profile/create_update_talk.html
@@ -3,13 +3,13 @@
       <h4 class="title"></h4>
     </div>
     <div class="panel-body">
-      <form class="form-horizontal" method="post" name="create_update_talk">
+      <form class="form-horizontal" method="post" name="create-update-talk">
 
-        <div class="form-group talk_title_input">
+        <div class="form-group title_input">
           <label for="inputTitle" class="col-sm-2 control-label">Title</label>
           <div class="col-sm-10">
-            <input type="text" class="form-control talk_title" id="inputTitle" name="talk_title" required placeholder="Talk title">
-            <div class="help-block talk_title_error"></div>
+            <input type="text" class="form-control talk_title" id="inputTitle" name="title" required placeholder="Talk title">
+            <div class="help-block title_error"></div>
           </div>
         </div>
 
