--- a/views/profile/password.html
+++ b/views/profile/password.html
@@ -5,7 +5,7 @@
           Change Password
         </div>
         <div class="panel-body">
-          <form class="form-horizontal" method="post">
+          <form class="form-horizontal" method="post" name="change-password">
 
             <div class="form-group old_password_input">
               <label for="oldPasswordInput" class="col-sm-4 control-label">Old Password</label>
