--- a/views/admin/events/create_update.html
+++ b/views/admin/events/create_update.html
@@ -1,4 +1,4 @@
-  <form class="form-horizontal" method="post" name="update_create_event">
+  <form class="form-horizontal" method="post" name="update-create-event">
 
     <div class="form-group">
       <div class="col-sm-offset-2 col-sm-10">
