--- a/views/fragments/login.html
+++ b/views/fragments/login.html
@@ -37,7 +37,7 @@
         </div>
         <div class="panel-body">
           <p>Please enter your email address and hit submit to begin the conference registration process.</p>
-          <form class="form-horizontal" action="/register" method="post">
+          <form class="form-horizontal" action="/register" method="post" name="register-reset">
             <div class="form-group username_input">
               <label for="emailInput" class="col-sm-3 control-label">Email</label>
               <div class="col-sm-9">
