switch last DTV use to DPDTV

--- a/views/password_reset.xml
+++ b/views/password_reset.xml
@@ -1,10 +1,10 @@
 <specification>
   <value name="action_name"/>
   <value name="text" filter="markdown" op="hook"/>
-  <value name="password_input" field="errors.password_input" target="class"
+  <value name="password_input" field="data.css.password" target="class"
     op="append" joiner=" "/>
-  <value name="password_error" field="errors.password"/>
-  <value name="confirm_password_input" field="errors.passwords_input"
+  <value name="password_error" field="data.errors.password"/>
+  <value name="confirm_password_input" field="data.css.passwords"
     target="class" op="append" joiner=" "/>
-  <value name="confirm_password_error" field="errors.passwords"/>
+  <value name="confirm_password_error" field="data.errors.passwords"/>
 </specification>
