remove tray commas from speaker list

--- a/views/fragments/speakers.html
+++ b/views/fragments/speakers.html
@@ -3,7 +3,7 @@
     <a class="speaker-link" href="speakers/"><img class="photo img-responsive img-rounded" src="/img/people/"></a>
     <h4 class="speaker-title"><a class="speaker-link name" href="speakers/"></a></h4>
     <div class="center-block">
-      <span class="company">Booking.com</span>, <span class="city">Amsterdam</span>, <span class="country">Netherlands</span>
+      <span class="company">Name, </span><span class="city">Name, </span><span class="country">Netherlands</span>
     </div>
   </div>
 </div>
