Specify training days more accurately in schedule view.

--- a/views/schedule.html
+++ b/views/schedule.html
@@ -12,7 +12,7 @@
         <tr>
           <td>Mon 19th - Tue 20th October 2015</td>
           <td>Amerikahaus</td>
-          <td>Two days of Perl::Dancer training</td>
+          <td>Two days of Dancer and DBIx::Class training</td>
         </tr>
         <tr>
           <td>Wed 21st - Thu 22nd October 2015</td>
