modify markdown link and add /syntax

--- a/views/wiki/edit.html
+++ b/views/wiki/edit.html
@@ -31,7 +31,7 @@
   <div class="col-sm-3">
     <div class="panel panel-default">
       <div class="panel-body">
-      <p>Wiki pages are formatted using <a target='_blank' href='http://daringfireball.net/projects/markdown/'>Markdown</a> though some tags are scrubbed for safety.</p>
+      <p>Wiki pages are formatted using <a target='_blank' href='http://daringfireball.net/projects/markdown/syntax'>Markdown</a> though some tags are scrubbed for safety.</p>
       <p>For links to other Wiki pages use [wiki:OtherPage].</p><p>For links to users use [user:NickName], [user:username] or simply [me]. These will be translated to full wiki links on preview or save.</p>
     </div>
     </div>
