add wiki toc to rhs of most wiki pages

--- a/views/wiki.xml
+++ b/views/wiki.xml
@@ -11,4 +11,5 @@
   <value name="edit" field="uri" target="href" op="append"/>
   <value name="history" field="uri" target="href" op="append"/>
   <value name="user_link" field="node.author.id" target="href" op="append"/>
+  <value name="wiki-toc" op="hook" include="fragments/wiki_toc.html"/>
 </specification>
