--- a/views/wiki/diff.html
+++ b/views/wiki/diff.html
@@ -1,3 +1,5 @@
+<div class="row">
+  <div class="col-sm-9">
   <div class="panel panel-default">
     <div class="panel-heading">
       <h3 class="panel-title"></h3>
@@ -10,3 +12,6 @@
       <a href="/wiki">Home</a> | <a href="/wiki/tags">Tags</a> | <a href="/wiki/recent">Recent changes</a> | <a class="history" href="/wiki/history/">History</a>
     </div>
   </div>
+  </div>
+  <div class="col-sm-3 wiki-toc"></div>
+</div>
