--- a/views/wiki/history.html
+++ b/views/wiki/history.html
@@ -1,3 +1,5 @@
+<div class="row">
+  <div class="col-sm-9">
   <div class="panel panel-default">
     <div class="panel-heading">
       <h3 class="panel-title">title</h3>
@@ -26,3 +28,6 @@
       <a href="/wiki">Home</a> | <a href="/wiki/tags">Tags</a>
     </div>
   </div>
+  </div>
+  <div class="col-sm-3 wiki-toc"></div>
+</div>
