--- a/views/wiki/recent.html
+++ b/views/wiki/recent.html
@@ -1,3 +1,5 @@
+<div class="row">
+  <div class="col-sm-9">
   <div class="panel panel-default">
     <div class="panel-heading">
       <h3 class="panel-title">title</h3>
@@ -22,3 +24,6 @@
       </form>
     </div>
   </div>
+  </div>
+  <div class="col-sm-3 wiki-toc"></div>
+</div>
