--- a/views/wiki/version.html
+++ b/views/wiki/version.html
@@ -1,3 +1,5 @@
+<div class="row">
+  <div class="col-sm-9">
   <div class="panel panel-default">
     <div class="panel-heading">
       <h3 class="panel-title"></h3>
@@ -15,3 +17,6 @@
       </div>
     </div>
   </div>
+  </div>
+  <div class="col-sm-3 wiki-toc"></div>
+</div>
