Add note about status to schedule view.

--- a/views/schedule.html
+++ b/views/schedule.html
@@ -24,6 +24,19 @@
   </div>
 
   <div class="panel panel-default">
+     <div class="panel-heading">
+       <h2 class="panel-title">Conference Days</h2>
+     </div>
+     <div class="panel-body">
+       <p>
+         Please note that the schedule for <b>Wednesday and Thursday is
+         preliminary</b> and subject to change, we except to finalize it
+         before 5th October.
+       </p>
+    </div>
+  </div>
+
+  <div class="panel panel-default">
     <div class="panel-heading no-border">
       <ul class="nav nav-pills nav_days" role="tablist">
         <li role="presentation" class="nav_day"><a class="link" href="#" aria-controls="" role="tab" data-toggle="pill">Day</a></li>
