one page per day in schedule instead of multiday via js magic

--- a/views/schedule.html
+++ b/views/schedule.html
@@ -30,7 +30,7 @@
      <div class="panel-body">
        <p>
          Please note that the schedule for <b>Wednesday and Thursday is
-         preliminary</b> and subject to change, we except to finalize it
+         preliminary</b> and subject to change, we expect to finalize it
          before 5th October.
        </p>
     </div>
@@ -38,49 +38,43 @@
 
   <div class="panel panel-default">
     <div class="panel-heading no-border">
-      <ul class="nav nav-pills nav_days" role="tablist">
-        <li role="presentation" class="nav_day"><a class="link" href="#" aria-controls="" role="tab" data-toggle="pill">Day</a></li>
+      <ul class="nav nav-pills nav_days">
+        <li role="presentation" class="nav_day"><a class="link" href="/talks/schedule/">Day</a></li>
       </ul>
+      <h4 class="date">Date</h4>
     </div>
-    <div class="tab-content">
-      <div role="tabpanel" class="tab-pane panel-default" id="">
-        <div class="panel-heading">
-          <h4 class="date">Date</h4>
-        </div>
-        <div class="panel-body no_rows">
-          Schedule for this day has not yet been finalised.
-        </div>
-        <div class="table-responsive has_rows">
-          <table class="table table-bordered schedule">
-            <thead>
-              <tr>
-                <th>Time</th>
-                <th class="room-name"><span class="name">RoomName</span></th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr class="timeslot">
-                <td class="time"></td>
-                <td class="slot">
-                  <span class="is_talk">
-                    <span class="show-stars"><span class="remove_talk"><a href="/talks/remove/" class="picked"><img src="/img/picked.gif" title="remove from personal schedule"></a></span><span class="add_talk"><a href="/talks/add/" class="unpicked"><img src="/img/unpicked.gif" title="add to personal schedule"></a></span> </span>
-                    <a class="author_uri" href="/speakers/"><span class="author_name">Author</span><span class="author_nickname"> (NickName)</span></a> - 
-                    <a class="title" href="/talks/">Talk Name</a>
-                    <span class="duration"> (10 min)</span><span> </span>
-                    <span class="stars">X</span><img src="/img/picked.gif">
-                  </span>
-                  <span class="is_event">
-                    <a class="title" href="/events/">Event Name</a>
-                    <span class="duration"> (10 min)</span>
-                  </span>
-                  <span class="is_empty">
-                  </span>
-                </td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-      </div>
+    <div class="panel-body no_rows">
+      Schedule for this day has not yet been finalised.
+    </div>
+    <div class="table-responsive has_rows">
+      <table class="table table-bordered schedule">
+        <thead>
+          <tr>
+            <th>Time</th>
+            <th class="room-name"><span class="name">RoomName</span></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr class="timeslot">
+            <td class="time"></td>
+            <td class="slot">
+              <span class="is_talk">
+                <span class="show-stars"><span class="remove_talk"><a href="/talks/remove/" class="picked"><img src="/img/picked.gif" title="remove from personal schedule"></a></span><span class="add_talk"><a href="/talks/add/" class="unpicked"><img src="/img/unpicked.gif" title="add to personal schedule"></a></span> </span>
+                <a class="author_uri" href="/speakers/"><span class="author_name">Author</span><span class="author_nickname"> (NickName)</span></a> - 
+                <a class="title" href="/talks/">Talk Name</a>
+                <span class="duration"> (10 min)</span><span> </span>
+                <span class="stars">X</span><img src="/img/picked.gif">
+              </span>
+              <span class="is_event">
+                <a class="title" href="/events/">Event Name</a>
+                <span class="duration"> (10 min)</span>
+              </span>
+              <span class="is_empty">
+              </span>
+            </td>
+          </tr>
+        </tbody>
+      </table>
     </div>
   </div>
 
