add guru_level to user admin

--- a/views/admin/users.html
+++ b/views/admin/users.html
@@ -4,12 +4,13 @@
       <thead>
         <tr>
           <th>Username</th>
-          <th>Nick name</th>
+          <th>Nickname</th>
           <th>First name</th>
           <th>Last name</th>
           <th>Roles</th>
           <th>Attendee</th>
           <th>Confirmed</th>
+          <th>Guru Level</th>
           <th>Edit</th>
           <th>Delete</th>
         </tr>
@@ -23,6 +24,7 @@
           <td class="roles"><span class="role"><span class="name">Role</span><span class="sep">, </span></span></td>
           <td class="attendee">Yes/No</td>
           <td class="confirmed">Yes/No</td>
+          <td class="guru_level"></td>
           <td><a class="edit" href="/admin/users/edit/"><i class="fa fa-edit"></i></a></td>
           <td><a class="delete" href="/admin/users/delete/"><i class="fa fa-trash"></i></a></td>
         </tr>
