--- a/views/admin/users/create_update.html
+++ b/views/admin/users/create_update.html
@@ -110,6 +110,14 @@
           </div>
         </div>
 
+        <div class="form-group guru_level_input">
+          <label class="col-sm-2 control-label">Guru level</label>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" name="guru_level">
+            <div class="help-block guru_level_error"></div>
+          </div>
+        </div>
+
         <div class="form-group bio_input">
           <label for="inputBio" class="col-sm-2 control-label">Bio</label>
           <div class="col-sm-10">
