Update hackathon part of frontpage note.

--- a/views/index.html
+++ b/views/index.html
@@ -12,8 +12,9 @@
       October at <a href="#location">Amerikahaus</a> in Vienna.
       Training course places are limited so
       please <a href="/tickets">book early</a> to guarantee your seat.</p>
-      <p>Running alongside the training days we will be running a hackathon
-      - further details will be made available soon.</p>
+      <p>Running alongside the training days we will be running a
+      <a href="/wiki/node/Hackathons">hackathon</a> at the
+      <a href="https://metalab.at/" target="_blank">Metalab</a>.</p>
     </div>
 
   <div class="register-container">
