add sponsors to sidebar + create sponsors page

--- a/views/fragments/sidebar.html
+++ b/views/fragments/sidebar.html
@@ -1,5 +1,14 @@
 <div class="well">
-  <h4 class="text-center">Sponsors</h4>
+  <h4 class="text-center">Our Sponsors</h4>
+  <h5 class="text-center">Silver Sponsors</h5>
+  <div>
+    <a href="http://www.weborama.com/"><img src="/img/logo-weborama1.png" class="center-block img-responsive"></a>
+  </div>
+  <h5 class="text-center">Bronze Sponsors</h5>
+  <div>
+    <a href="http://www.eligo.co.uk/technology"><img src="/img/eligo-logo.jpg" class="center-block img-responsive"></a>
+  </div>
+  <h5 class="text-center">Sponsors</h5>
   <div>
     <a href="http://www.informastudio.com/"><img src="/img/informa-logo.png" class="center-block img-responsive"></a>
   </div>
