add sponsor Ctrl-O and tweak css for /sponsors

--- a/views/fragments/sidebar.html
+++ b/views/fragments/sidebar.html
@@ -8,6 +8,9 @@
   <div>
     <a href="http://www.eligo.co.uk/technology"><img src="/img/eligo-logo.jpg" class="center-block img-responsive"></a>
   </div>
+  <div>
+    <a href="http://www.ctrlo.com/"><img src="/img/CtrlO-logo.png" class="center-block img-responsive"></a>
+  </div>
   <h5 class="text-center">Sponsors</h5>
   <div>
     <a href="http://www.informastudio.com/"><img src="/img/informa-logo.png" class="center-block img-responsive"></a>
