--- a/views/sponsors.html
+++ b/views/sponsors.html
@@ -1,4 +1,4 @@
-<div>
+<div id="sponsors">
   <h3 class="text-center">Silver Sponsors</h3>
   <div>
     <a href="http://www.weborama.com/"><img src="/img/logo-weborama1.png" class="center-block img-responsive"></a>
@@ -6,6 +6,9 @@
   <h3 class="text-center">Bronze Sponsors</h3>
   <div>
     <a href="http://www.eligo.co.uk/technology"><img src="/img/eligo-logo.jpg" class="center-block img-responsive"></a>
+  </div>
+  <div>
+    <a href="http://www.ctrlo.com/"><img src="/img/CtrlO-logo.png" class="center-block img-responsive"></a>
   </div>
   <h3 class="text-center">Sponsors</h3>
   <div>
