--- a/public/css/site.css
+++ b/public/css/site.css
@@ -439,6 +439,6 @@ span.tagcloud24 a {text-decoration: none;}
 .panel table.table-bordered {
   margin-bottom: 0;
 }
-.sidebar .well div {
+.sidebar .well div, #sponsors div {
     margin-bottom: 40px;
 }
