--- a/views/speaker.html
+++ b/views/speaker.html
@@ -43,5 +43,14 @@
         </div>
       </div>
 
+      <div class="row attending-talks">
+      <strong class="col-md-4 text-uppercase">Attending talks</strong>
+        <div class="col-md-8">
+        <ul class="list-unstyled">
+          <li class="attending"><a class="link" href="/talks/">Talk Name</a></li>
+        </ul>
+        </div>
+      </div>
+
     </div>
   </div>
