add /myschedule* routes using /talks/schedule* routes and view

--- a/views/schedule.html
+++ b/views/schedule.html
@@ -39,7 +39,7 @@
   <div class="panel panel-default">
     <div class="panel-heading no-border">
       <ul class="nav nav-pills nav_days">
-        <li role="presentation" class="nav_day"><a class="link" href="/talks/schedule/">Day</a></li>
+        <li role="presentation" class="nav_day"><a class="link" href="">Day</a></li>
       </ul>
       <h4 class="date">Date</h4>
     </div>
