add mandd as sponsor

--- a/views/fragments/sidebar.html
+++ b/views/fragments/sidebar.html
@@ -9,6 +9,9 @@
     <a href="http://www.eligo.co.uk/technology"><img src="/img/eligo-logo.jpg" class="center-block img-responsive"></a>
   </div>
   <div>
+    <a href="https://www.m-and-d.com/"><img src="/img/mandd-logo.png" class="center-block img-responsive"></a>
+  </div>
+  <div>
     <a href="http://www.ctrlo.com/"><img src="/img/CtrlO-logo.png" class="center-block img-responsive"></a>
   </div>
   <h5 class="text-center">Sponsors</h5>
