--- a/views/sponsors.html
+++ b/views/sponsors.html
@@ -8,6 +8,9 @@
     <a href="http://www.eligo.co.uk/technology"><img src="/img/eligo-logo.jpg" class="center-block img-responsive"></a>
   </div>
   <div>
+    <a href="https://www.m-and-d.com/"><img src="/img/mandd-logo.png" class="center-block img-responsive"></a>
+  </div>
+  <div>
     <a href="http://www.ctrlo.com/"><img src="/img/CtrlO-logo.png" class="center-block img-responsive"></a>
   </div>
   <h3 class="text-center">Sponsors</h3>
