add sponsor calevo

--- a/views/sponsors.html
+++ b/views/sponsors.html
@@ -5,6 +5,9 @@
   </div>
   <h3 class="text-center">Bronze Sponsors</h3>
   <div>
+    <a href="https://www.calevo.com/"><img src="/img/calevo-logo.jpg" class="center-block img-responsive"></a>
+  </div>
+  <div>
     <a href="http://www.eligo.co.uk/technology"><img src="/img/eligo-logo.jpg" class="center-block img-responsive"></a>
   </div>
   <div>
