--- a/views/fragments/sidebar.html
+++ b/views/fragments/sidebar.html
@@ -6,6 +6,9 @@
   </div>
   <h5 class="text-center">Bronze Sponsors</h5>
   <div>
+    <a href="https://www.calevo.com/"><img src="/img/calevo-logo.jpg" class="center-block img-responsive"></a>
+  </div>
+  <div>
     <a href="http://www.eligo.co.uk/technology"><img src="/img/eligo-logo.jpg" class="center-block img-responsive"></a>
   </div>
   <div>
