--- a/views/profile/edit.html
+++ b/views/profile/edit.html
@@ -81,6 +81,13 @@
           </div>
         </div>
 
+        <div class="form-group">
+          <label class="col-sm-2 control-label">T-shirt size</label>
+          <div class="col-sm-10">
+            <select name="t_shirt_size" class="t_shirt_size form-control"></select>
+          </div>
+        </div>
+
         <div class="form-group monger_groups_input">
           <label for="inputMongerGroups" class="col-sm-2 control-label">Monger Groups</label>
           <div class="col-sm-10">
