show users against shirt sizes in admin t-shirt list

--- a/views/admin/tshirts.html
+++ b/views/admin/tshirts.html
@@ -4,12 +4,14 @@
       <tr>
         <th>Size</th>
         <th>Count</th>
+        <th>Users</th>
       </tr>
     </thead>
     <tbody>
       <tr class="shirt">
-        <td class="t_shirt_size">Unknown</td>
+        <td class="size">Unknown</td>
         <td class="count">434</td>
+        <td class="users">Him, Her, ...</td>
       </tr>
     </tbody>
   </table>
