wrap user name in link to admin/user/edit in t-shirt list

--- a/views/admin/tshirts.html
+++ b/views/admin/tshirts.html
@@ -11,7 +11,7 @@
       <tr class="shirt">
         <td class="size">Unknown</td>
         <td class="count">434</td>
-        <td class="users">Him, Her, ...</td>
+        <td><span class="user"><a class="id" href="/admin/users/edit/">Name</a></span><span class="sep">, </span></td>
       </tr>
     </tbody>
   </table>
