add total_shorts count to /admin/t-shirts table

--- a/views/admin/tshirts.html
+++ b/views/admin/tshirts.html
@@ -14,5 +14,11 @@
         <td><span class="user"><a class="id" href="/admin/users/edit/">Name</a></span><span class="sep">, </span></td>
       </tr>
     </tbody>
+    <tfoot>
+      <tr>
+        <th>TOTAL</th>
+        <td class="total_shirts">0</td>
+      </tr>
+    </tfoot>
   </table>
 </div>
