add new sponsor booking.com

--- a/views/fragments/sidebar.html
+++ b/views/fragments/sidebar.html
@@ -1,5 +1,9 @@
 <div class="well">
   <h4 class="text-center">Our Sponsors</h4>
+  <h5 class="text-center">Gold Sponsors</h5>
+  <div>
+    <a href="http://www.booking.com/"><img src="/img/booking-logo.jpg" class="center-block img-responsive"></a>
+  </div>
   <h5 class="text-center">Silver Sponsors</h5>
   <div>
     <a href="http://www.weborama.com/"><img src="/img/logo-weborama1.png" class="center-block img-responsive"></a>
