--- a/views/sponsors.html
+++ b/views/sponsors.html
@@ -1,4 +1,8 @@
 <div id="sponsors">
+  <h3 class="text-center">Gold Sponsors</h3>
+  <div>
+    <a href="http://www.booking.com/"><img src="/img/booking-logo.jpg" class="center-block img-responsive"></a>
+  </div>
   <h3 class="text-center">Silver Sponsors</h3>
   <div>
     <a href="http://www.weborama.com/"><img src="/img/logo-weborama1.png" class="center-block img-responsive"></a>
