add sponsor ivouch

--- a/views/fragments/sidebar.html
+++ b/views/fragments/sidebar.html
@@ -9,6 +9,9 @@
     <a href="http://www.weborama.com/"><img src="/img/logo-weborama1.png" class="center-block img-responsive"></a>
   </div>
   <div>
+    <a href="http://www.ivouch.com/"><img src="/img/ivouch-logo.png" class="center-block img-responsive"></a>
+  </div>
+  <div>
     <a href="http://www.informastudio.com/"><img src="/img/informa-logo.png" class="center-block img-responsive"></a>
   </div>
   <h5 class="text-center">Bronze Sponsors</h5>
