--- a/views/talk.html
+++ b/views/talk.html
@@ -23,8 +23,13 @@
         <div class="panel-heading">
           <h3 class="panel-title">Talk Title Here</h3>
         </div>
-        <div class="panel-body abstract">
+        <div class="panel-body">
+          <div class="abstract">
           Abstract appears here.
+          </div>
+          <div class="talk-uri-container">
+            <a class="talk-uri">Download talk</a>
+          </div>
         </div>
         <div class="panel-footer">
           <div class="has_attendees">
