huge initial commit of surveys wip

--- a/views/surveys.html
+++ b/views/surveys.html
@@ -11,13 +11,7 @@
     <div class="panel-body">
       <span class="description">Additional text</span>
 
-      <div class="options-container">
-        <div class="options">
-          <div class="option"><span class="title">Option name</span></div>
-        </div>
-      </div>
-
-      <!--div class="is_radio">
+      <div class="radio-buttons">
         <div class="form-group option">
           <div class="radio">
             <label>
@@ -28,18 +22,7 @@
         </div>
       </div>
 
-      <div class="is_checkbox">
-        <div class="form-group option">
-          <div class="checkbox">
-            <label>
-              <input class="value" type="checkbox" name="" value="">
-              <span class="title">Option name</span>
-            </label>
-          </div>
-        </div>
-      </div-->
-
-      <div class="other-container">
+      <div class="option-other">
         <span class="other">replacement text goes here</span>:
         <textarea class="form-control othername" name="" rows="3"></textarea>
       </div>
