survey question submit to /surveys

--- a/views/surveys/questions.html
+++ b/views/surveys/questions.html
@@ -1,4 +1,4 @@
-<form class="form survey" action="/survey" method="post">
+<form class="form survey" action="/surveys" method="post">
 <input type="hidden" class="survey_id" name="survey_id">
 
 <div class="section">
