--- a/views/surveys.html
+++ b/views/surveys.html
@@ -2,7 +2,7 @@
 <input type="hidden" class="survey_id" name="survey_id">
 
 <div class="no-surveys">
-  <p class="lead">You have no surveys to complete at this time</a>
+  <p class="lead no_surveys_txt">You have no surveys to complete at this time</a>
 </div>
 
 <div class="survey-list">
