surveys now working with 'other' text

--- a/views/surveys/result.html
+++ b/views/surveys/result.html
@@ -38,6 +38,13 @@
         </table>
       </div>
 
+      <div class="other-container">
+        <span class="other">replacement text goes here</span>:
+        <ul>
+          <li class="other-response"><span class="response">Some text</span></li>
+        </ul>
+      </div>
+
     </div>
   </div>
 </div>
